# marp-agent-mcp

./: .dockerignore  .gitignore  .hadolint.yaml  .mise.toml  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  compose.yaml  constants.ts  main.ts  mcp-app.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.test.ts  server.ts  tsconfig.json  tsconfig.server.json  validate.sh  vite.config.ts
.github/: renovate.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-review.yml  publish.yml  release.yml  renovate.yml  trivy.yml  validate.yml
client/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
client/src/: main.ts  styles.css  vite-env.d.ts
server/: main.py  pyproject.toml
server/tools/: export.py  validate_slide.py
skills/marp-agent-mcp/: SKILL.md
src/: format.test.ts  format.ts  global.css  inject-theme.test.ts  inject-theme.ts  marp-args.test.ts  marp-args.ts  mcp-app.css  mcp-app.ts  overflow.test.ts  overflow.ts
themes/: border.css  gradient.css  speee.css
