[project]
name = "marp-agent-mcp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
    "uvicorn>=0.42.0",
    "starlette>=0.52.1",
]

[[tool.uv.index]]
url = "https://pypi.flatt.tech/simple/"
default = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
